@@ -25,6 +25,9 @@
   Changed some utf8 internals for LOBs.
   Changed to not warn if ORACLE_HOME env var is not defined
     as it's not used with Oracle's new 'Instant Client'.
+  Changed ORA_OCI constant from being just 7 or 8 to being a dualvar:
+    in numeric context returns the major version number (8, 9, 10 etc)
+    in string context returns "major.minor" version string.
 
   Added Test::More as a prerequisite module.
   Added bind_param() support for SQL_BLOB & SQL_CLOB thanks to Stephen Clouse.
